# ThreadSafeTaskQueue

./: .gitignore  CMakeLists.txt  README.md  build_run.bat  build_run.sh
include/: CMakeLists.txt  TSQueue.hpp  Task.hpp  TaskQueue.hpp  WaitableQueue.hpp
src/: CMakeLists.txt  Task.cpp  TaskQueue.cpp
test/: CMakeLists.txt  TestTaskQueue.cpp
